<resources>

    <string name="app_name">خورجین</string>
    <string name="please_wait">لطفا صبر کنید</string>
    <string name="login">ورود</string>
    <string name="login_title">ورود به حساب کاربری</string>
    <string name="api_response_failed">خطا در برقراری ارتباط</string>
    <string name="authentication_failed">اعتبار زمانی منقضی شده است</string>
    <string name="google_play_services_not_installed">لطفا ابتدا google play services را نصب کنید</string>
    <string name="get_permission_failed">خطا در اعطای مجوز</string>
    <string name="no_permission_title">اعطای مجوز</string>
    <string name="btn_alert">باشه</string>
    <string name="btn_ok">باشه</string>
    <string name="tel_mobile_number">شماره تلفن همراه</string>
    <string name="validation_phonenumber_or_email">شماره تلفن و یا ایمیل خورد را وارد کنید</string>
    <string name="validation_phonenumber">شماره تلفن اشتباه است</string>
    <string name="validation_password">لطفا رمز عبور را وارد کنید</string>
    <string name="user_name">شماره تلفن همراه</string>
    <string name="password_user">رمز عبور</string>
    <string name="text_attention">توجه</string>
    <string name="ok">تائید</string>
    <string name="pop_up_ok">تائید</string>
    <string name="btn_cancel">انصراف</string>
    <string name="forget_password">رمز عبور خود را فراموش کردید؟</string>
    <string name="register_user">ثبت نام کنید</string>
    <string name="title">عنوان</string>
    <string name="text">متن</string>
    <string name="software_updating">به روز رسانی نرم افزار</string>
    <string name="lost_internet">به اینترنت متصل نیستید</string>
    <string name="data_incorrect">داده ورودی صحیح نیست</string>
    <string name="validation_password_length">برای رمز عبور حداقل 6 کاراکتر وارد نمائید</string>
    <string name="not_can_call">امکان فراخوانی متد وجود ندارد</string>
    <string name="problem">مشکلی رخ داده است</string>
    <string name="forget_password_title">فراموشی رمز عبور</string>
    <string name="send">ارسال</string>
    <string name="text_password">لطفا شماره تلفن همراه خود را در کادر زیر وارد کرده و منتظر دریافت پیامک کد فعالسازی باشید</string>
    <string name="name">نام</string>
    <string name="family">نام خانوادگی</string>
    <string name="password_latin">رمز عبور به انگلیسی وارد شود</string>
    <string name="date_birth">تاریخ تولد</string>
    <string name="register">ثبت نام</string>
    <string name="sign_in">ورود به برنامه</string>
    <string name="register_title">ثبت نام</string>
    <string name="congratulations">تبریک</string>
    <string name="please_enter_password">لطفا رمز عبور خود را وارد نمائید</string>
    <string name="please_enter_tel_number">لطفا شماره تلفن خود را وارد نمائید</string>
    <string name="please_enter_right_tel_number">لطفا شماره تلفن صحیح را وارد نمائید</string>
    <string name="text_send_message">پیامک فراموشی رمز عبور برای شما فرستاده شد</string>
    <string name="sign_in_text">لطفا شماره تلفن همراه خود را در کادر زیر وارد کرده و  منتظر دریافت پیامک کد فعالسازی باشید</string>
    <string name="validation_activation">لطفا کد فعالسازی را وارد کنید</string>
    <string name="validation_activation_true">لطفا کد فعالسازی صحیح را وارد نمائید</string>
    <string name="activation_text">لطفا کد فعالسازی پیامک شده را در کادر زیر وارد نمائید</string>
    <string name="store">نام فروشگاه</string>
    <string name="tel_number">شماره تلفن ثابت</string>
    <string name="address">آدرس فروشگاه</string>
    <string name="postal_code">کد پستی فروشگاه</string>
    <string name="location">موقعیت از روی نقشه</string>
    <string name="please_enter_name">لطفا نام خود را وارد نمائید</string>
    <string name="please_enter_family">لطفا نام خانوادگی خود را وارد نمائید</string>
    <string name="profile">پروفایل</string>
    <string name="edit_profile">ثبت</string>
    <string name="city">شهر</string>
    <string name="area">منطقه</string>

    <string name="number_request_more_than_three">تعداد درخواست کد فعالسازی از سمت شما بیشتر از سه بار بوده است.لطفا با پشتیبانی تماس بگیرید.</string>
    <string name="storName">نام فروشگاه</string>
    <string name="edit_Location">ثبت</string>
    <string name="storTel">تلفن فروشگاه</string>
    <string name="edit_internet">ثبت</string>
    <string name="email">ایمیل</string>
    <string name="telegram">تلگرام</string>
    <string name="instagram">اینستاگرام</string>
    <string name="search">جستجوی نام محصول، برند یا دسته بندی</string>
    <string name="suggestion">پیشنهاد ویژه</string>
    <string name="validation_name">لطفا نام خود را وارد کنید</string>
    <string name="validation_family">لطفا نام خانوادگی خود را وارد کنید</string>
    <string name="validation_birth_date">لطفا تاریخ تولد خود را وارد کنید</string>
    <string name="info">اطلاعات فردی</string>
    <string name="permission_required">مجوز دسترسی</string>
    <string name="app_need_access_camera">شما نیاز به مجوز دسترسی به دوربین دارید</string>
    <string name="cancel">انصراف</string>
    <string name="txt_select_location">موقعیت خود را تایید کنید</string>
    <string name="select_location_building">انتخاب موقعیت از روی نقشه</string>
    <string name="app_need_access_location">این برنامه نیاز به مجوز دسترسی موقعیت مکانی شما دارد</string>
    <string name="validation_storename">لطفا نام فروشگاه را وارد کنید</string>
    <string name="validation_storetel">لطفا شماره تلفن فروشگاه را وارد کنید</string>
    <string name="validation_address">لطفا آدرس فروشگاه را وارد کنید</string>
    <string name="validation_net">لطفا حداقل یکی از فیلدها را  وارد نمایید</string>
    <string name="validation_email">لطفا آدرس ایمیل صحیح را وارد نمایید</string>
    <string name="category">دسته بندی کالا</string>
    <string name="price"> قیمت عمده </string>
    <string name="percent">درصد تخفیف</string>
    <string name="rial">ريال</string>
    <string name="brand">برند کالا</string>
    <string name="exit">خروج</string>
    <string name="eit_ok">آیا برای خروج از برنامه اطمینان دارید؟</string>
    <string name="categorylist">لیست کالا</string>
    <string name="number">تعداد</string>
    <string name="sum">جمع نهائی</string>
    <string name="set_order">ثبت سفارش</string>
    <string name="delete_ok">برای پاک کردن لیست سبد خرید اطمینان دارید؟</string>
    <string name="text_title">سامانه الکترونیکی تامین کالا</string>
    <string name="aboutme">ارتباط با ما</string>
    <string name="change_password">تغییر رمز عبور </string>
    <string name="please_enter_new_password">لطفا رمز عبور جدید را وارد نمائید</string>
    <string name="password_re_new">تکرار رمز عبور</string>
    <string name="validation_re_password_length">برای تکرار رمز عبور حداقل 6 کاراکتر وارد نمائید</string>
    <string name="validation_re_password">لطفا تکرار رمز عبور را وارد نمائید</string>
    <string name="validation_two_password">رمز عبور و تکرار آن با هم یکسان نیست</string>
    <string name="change_password_ok">تغییر رمز عبور با موفقیت انجام شد</string>
    <string name="shopping">سبد خرید</string>
    <string name="report">گزارش خرید ها</string>
    <string name="list_report">لیست خرید ها</string>
    <string name="sum_factor">جمع فاکتور :</string>
    <string name="num_factor">شماره فاکتور :</string>
    <string name="date_factor">تاریخ فاکتور :</string>
    <string name="state_factor">وضعیت فاکتور :</string>
    <string name="name_stuff">نام کالا :</string>
    <string name="pricee">قیمت :</string>
    <string name="numberr">تعداد :</string>
    <string name="data_is_null">این درخواست هیچ کالائی ندارد. بنابر این حذف میگردد.</string>
    <string name="sale">قیمت مصرف کننده(فی)</string>
    <string name="set_address">لطفا ابتدا آدرس خود را تکمیل نمائید</string>
    <string name="number_in_carton">تعداد در هر کارتن</string>
    <string name="sumer">مجموع</string>
    <string name="fee">قیمت مصرف کننده(فی)</string>
    <string name="txt_dont_recieve_code">کد فعالسازی را دریافت نکردم</string>
    <string name="txt_call_center">تماس با پشتیبانی</string>
    <string name="checkCode">تایید صحت کد</string>
    <string name="code">کد معرف</string>
    <string name="code_is_null">کد را وارد کنید</string>
    <string name="notifyInventory">محصولات در انتظار</string>
    <string name="map">نقشه</string>
</resources>
