<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/backgroundPage"
    tools:context="com.koohpar.dstrbt.ui.forgetPassword.ForgetPasswordActivity">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.koohpar.dstrbt.ui.forgetPassword.ForgetPasswordViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/main_header_selector">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/AppTheme.TextViewTitleWhite"
                android:layout_centerInParent="true"
                android:text="@string/forget_password_title"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size_large"
                android:textStyle="bold" />
        </RelativeLayout>

        <ImageView
            android:layout_width="50dp"
            android:layout_height="20dp"
            android:layout_alignParentLeft="true"
            android:layout_margin="@dimen/margin_normal"
            android:onClick="@{()->viewModel.onBackCall()}"
            android:src="@drawable/back_icon"
            android:tint="@color/white_transparent" />


        <TextView
            android:id="@+id/desc"
            style="@style/AppTheme.TextViewTitleWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/toolbar"
            android:layout_margin="@dimen/margin_normal"
            android:text="@string/text_password" />


        <TextView
            android:id="@+id/tel_text"
            style="@style/AppTheme.TextViewWhiteMiniSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/desc"
            android:layout_marginRight="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_normal"
            android:text="@string/tel_mobile_number" />

        <EditText
            android:id="@+id/tel_number"
            style="@style/AppTheme.EditTextWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tel_text"
            android:layout_marginLeft="@dimen/margin_normal"
            android:layout_marginRight="@dimen/margin_normal"
            android:inputType="phone" />

        <Button
            android:id="@+id/send_text"
            style="@style/AppTheme.ButtonAccentColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tel_number"
            android:layout_marginLeft="@dimen/margin_normal"
            android:layout_marginRight="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_normal"
            android:onClick="@{()->viewModel.onCallSendTelNumber()}"
            android:text="@string/send" />
    </RelativeLayout>

</layout>