<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_mini_mini_small"
    card_view:cardCornerRadius="0dp"
    card_view:cardUseCompatPadding="true"
    card_view:contentPadding="-5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:padding="@dimen/padding_common"
            android:scaleType="fitXY"
            android:src="@drawable/logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:gravity="right"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:gravity="right"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/brand"
                    style="@style/AppTheme.TextViewTitleWhite2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginRight="@dimen/margin_large"
                    android:layout_marginTop="@dimen/margin_small"
                    android:padding="@dimen/padding_common"
                    android:text="@string/name"
                    android:textColor="@color/gray_500" />

                <TextView
                    android:id="@+id/name"
                    style="@style/AppTheme.TextViewTitleWhite2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginRight="@dimen/margin_large"
                    android:layout_marginTop="@dimen/margin_small"
                    android:padding="@dimen/padding_common"
                    android:text="@string/name" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_500" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txtnumber"
                    style="@style/AppTheme.TextViewTitleWhite2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/margin_large"
                    android:layout_marginTop="@dimen/margin_small"
                    android:text="@string/number" />

                <ImageView
                    android:id="@+id/increase"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/margin_large"
                    android:src="@drawable/increase" />

                <TextView
                    android:id="@+id/number"
                    style="@style/AppTheme.TextViewTitleWhite2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/margin_small"
                    android:layout_marginRight="@dimen/margin_small"
                    android:layout_toRightOf="@+id/increase"
                    android:text="@string/number"
                    android:textSize="@dimen/font_size_large" />

                <ImageView
                    android:id="@+id/decrease"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/number"
                    android:src="@drawable/decrease" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/ttsale"
                    style="@style/AppTheme.TextViewTitleWhite2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/margin_large"
                    android:text="@string/sale" />

                <TextView
                    android:id="@+id/consumerPrice"
                    style="@style/AppTheme.TextViewTitleWhite2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/margin_small"
                    android:layout_toLeftOf="@+id/ttsale"
                    android:text="@string/price" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin_large">

                <TextView
                    android:id="@+id/cartonnumber"
                    style="@style/AppTheme.TextViewTitleWhite2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/number_in_carton" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin_large">

                <TextView
                    android:id="@+id/offer"
                    style="@style/AppTheme.TextViewTitleWhite2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true" />

                <TextView
                    style="@style/AppTheme.TextViewTitleWhite2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/margin_normal"
                    android:layout_toLeftOf="@+id/offer"
                    android:text="@string/percent" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textprice"
                    style="@style/AppTheme.TextViewTitleWhite2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/margin_large"
                    android:text="@string/price" />


                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/margin_small"
                    android:layout_toLeftOf="@+id/textprice">

                    <TextView
                        android:id="@+id/price"
                        style="@style/AppTheme.TextViewTitleWhite2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="@dimen/margin_normal"
                        android:text="@string/price"
                        android:textColor="@color/red_color" />

                    <TextView
                        style="@style/AppTheme.TextViewTitleWhite2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_marginRight="@dimen/margin_normal"
                        android:layout_toLeftOf="@+id/price"
                        android:text="@string/rial"
                        android:textColor="@color/red_color" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textprice"
                    android:layout_marginBottom="@dimen/margin_small"
                    android:layout_marginRight="@dimen/margin_large">

                    <TextView
                        android:id="@+id/textsum"
                        style="@style/AppTheme.TextViewTitleWhite2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:text="@string/sumer" />

                    <TextView
                        android:id="@+id/sumprice"
                        style="@style/AppTheme.TextViewTitleWhite2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/margin_large"
                        android:layout_toLeftOf="@+id/textsum"
                        android:text="@string/price" />

                    <TextView
                        style="@style/AppTheme.TextViewTitleWhite2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_marginRight="@dimen/margin_normal"
                        android:layout_toLeftOf="@+id/sumprice"
                        android:text="@string/rial" />
                </RelativeLayout>

            </RelativeLayout>

        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>